--- a/Car-Module/css/index.css
+++ b/Car-Module/css/index.css
@@ -16,6 +16,14 @@ canvas {
     z-index: 100;
 }
 
+.control {
+    position: absolute;
+    display: block;
+    bottom: 5px;
+    left: 5px;
+    z-index: 100;
+}
+
 .result {
     position: absolute;
     display: block;
@@ -35,8 +43,10 @@ canvas {
 }
 
 p {
-    margin: 10px;
+    margin: 5px;
     line-height: 25px;
+    height: 25px;
+    vertical-align: middle;
 }
 
 input[type=range] {
