--- a/Car-Module/css/index.css
+++ b/Car-Module/css/index.css
@@ -49,11 +49,17 @@ p {
 }
 
 .row {
-    margin: 5px;
+    margin: 10px;
 }
 
 label {
     color: #333333 !important;
+}
+
+button {
+    line-height: 28px !important;
+    height: 28px !important;
+    font-size: 13px !important;
 }
 
 .preloader-wrapper {
@@ -63,6 +69,14 @@ label {
     right: 0;
     top: 0;
     bottom: 0;
+}
+
+.collapsible-body {
+    padding: 0;
+}
+
+.collapsible-body>.row {
+    margin: 20px 0 0 0;
 }
 
 #success {
